--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=parolapixel
 spring.main.banner-mode=off
 
 logging.level.root=warn
+
+#logging configs to log in SQL statements
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
