--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ logging.level.root=warn
 #logging configs to log in SQL statements
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#Configure JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=create
