--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
 #Configure JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
